@@ -1,5 +1,8 @@
 === xdg-utils 1.x.x ====
 
+2010-02-23 Fathi Boudra <fabo@freedesktop.org>
+    * xdg-mime: report error on failure.
+
 2010-02-21 Fathi Boudra <fabo@freedesktop.org>
     * xdg-open: in open_generic, use xdg-mime to lookup mime type and
       association before the alternatives methods (mimeopen and run-mailcap).
